Added Products.API project.

--- a/SemanticAgents/SemanticAgents/Components/Pages/Chat/BasicChat.razor
+++ b/SemanticAgents/SemanticAgents/Components/Pages/Chat/BasicChat.razor
@@ -59,7 +59,7 @@ else if (_configuredModelProvider == "LMStudio" || _configuredModelProvider == "
 {
     <div class="row mt-2">
         <label for="userMessage" class="form-label">Your Message:</label>
-        <textarea rows="4" class="bg-dark text-light form-control" id="userMessage" @bind="_userMessage" @onfocus="ClearUserMessage" " />
+        <textarea rows="4" class="bg-dark text-light form-control" id="userMessage" @bind="_userMessage" @onfocus="ClearUserMessage" />
     </div>
 
     <div class="row mt-2">
