Added descriptions to Products.API ProductsController endpoints and ProductDTOs. In Blazor Web Server added a razor page ProductsChat.razor to use OpenApi Plugin to manage the products in the Products.API.

--- a/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
+++ b/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
@@ -75,6 +75,19 @@
                     </div>
                 </li>
 
+                <li class="nav-item px-3 dropdown">
+                    <NavLink class="nav-link dropdown-toggle" href="openApi" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <i class="bi-chat-text-fill"></i> &nbsp; Open API Spec
+                    </NavLink>
+                    <div class="dropdown-menu dropdown-menu-dark">
+                        <NavLink class="dropdown-item" href="openApi/productsChat" Match="NavLinkMatch.All">
+                            <i class="bi-chat-text"></i> &nbsp; Products Chat
+                        </NavLink>
+
+                        @* <div class="dropdown-divider"></div> *@
+                    </div>
+                </li>
+
 
 
 
