Simplified UI in Blazor App Chat pages.

--- a/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
+++ b/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
@@ -24,14 +24,16 @@
     </div>
 </div>
 
-@if (!_loadingConfiguration)
+<hr />
+
+@* @if (!_loadingConfiguration)
 {
     <div class="row mt-2">
         <div class="col-12">
             <h6 class="text-info-alt"><i>@_modelInfo</i></h6>
         </div>
     </div>
-}
+} *@
 
 @if (_thinking)
 {
