--- a/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/LocalModelConfiguration.razor
+++ b/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/LocalModelConfiguration.razor
@@ -1,7 +1,10 @@
 ﻿@using Microsoft.Extensions.Options
 @using SemanticAgents.Abstractions
+@using SemanticAgents.Client.Abstractions
 @using SemanticAgents.Configuration
 @using SemanticAgents.SemanticKernelDTOs
+@using System.Text.Json
+@using System.Threading.Tasks
 
 @* <h4>Local Model </h4> *@
 
@@ -18,24 +21,22 @@
 {
     <div class="row mt-2">
         <div class="col-2">
-            <h5 class="mt-2">Model Provider:</h5>
-        </div>
-        <div class="col-3">
-            <input inert type="text" class="bg-dark text-light form-control" @bind-value="ConfiguredModelProvider" />
-        </div>
-        <div class="col-2 offset-1">
             <h5 class="mt-2">Loaded Model:</h5>
         </div>
         <div class="col-3">
-            <input inert type="text" class="bg-dark text-light form-control" @bind-value="_loadedModelId" />
+            <input inert type="text" class="bg-dark text-light form-control mt-1" @bind-value="_loadedModelId" />
         </div>
+        @if (_loadedLMStudioModel is not null)
+        {
+            <div class="col-2">
+                <a class="btn button-custom-yellow form-control" @onclick="ShowLoadedLMStudioModel">Model Info</a>
+            </div>
+        }
     </div>
-    <div class="row mt-2">
-        <div class="col-12">
-            <h6 class="text-info-alt"><i>@_modelInfo</i></h6>
-        </div>
-    </div>
+
+    <hr />
 }
+
 
 @if (_thinking)
 {
@@ -51,16 +52,25 @@
     </div>
 }
 
+@if (_showLMStudioModel && _loadedLMStudioModel is not null)
+{
+    <LoadedModelModal ModelDTO="_loadedLMStudioModel" ModalTitle="Loaded Model" Capabilities="@_loadedModelCapabilities"
+        Cancel="HideLoadedLMStudioModel" CancelButtonTitle="Close" />
+}
+
 @code {
 
     [Parameter]
     public string? ConfiguredModelProvider { get; set; }
     [Inject]
-    private ILMStudioHttpProvider? _lmStudioHttpProvider { get; set; }
+    public ILMStudioHttpProvider? _lmStudioHttpProvider { get; set; }
     [Inject]
-    private IOllamaHttpProvider? _ollamaHttpProvider { get; set; }
+    public IOllamaHttpProvider? _ollamaHttpProvider { get; set; }
     [Inject]
-    private IOptions<SemanticKernelSettings> _semanticKernelSettings { get; set; } = default!;
+    public IOptions<SemanticKernelSettings> _semanticKernelSettings { get; set; } = default!;
+    [Inject]
+    public IToastrService Toastr { get; set; } = default!;
+
     [Parameter]
     public EventCallback<bool> ModelIsLoaded { get; set; }
 
@@ -71,46 +81,72 @@
 
     private string? _configuredTextModelId;
     private string? _loadedModelId;
-    private string? _modelInfo;
+    // private string? _modelInfo;
+
+    private LMStudioModelDTO? _loadedLMStudioModel;
+    private string? _loadedModelCapabilities;
+    private bool _showLMStudioModel;
+    private async Task ShowLoadedLMStudioModel()
+    {
+        if (_loadedLMStudioModel is null) return;
+        // await Toastr.ShowToastrSuccess($"The loaded model is NOT null!!!");
+        _showLMStudioModel = true;
+    }
+    private void HideLoadedLMStudioModel()
+    {
+        _showLMStudioModel = false;
+    }
 
     private async Task GetLMStudioLoadedModelData()
     {
-        // Get Text Model Id specified by configuration
-        _configuredTextModelId = _semanticKernelSettings.Value.LMStudio_TextModelId;
+        try
+        {
+            // Get Text Model Id specified by configuration
+            _configuredTextModelId = _semanticKernelSettings.Value.LMStudio_TextModelId;
 
-        if (_lmStudioHttpProvider is null)
-        {
-            _errorMessage = $"The LMStudio Http Provider is null";
-            return;
-        }
-        bool modelIsLoaded = false;
-        var result = await _lmStudioHttpProvider.GetLMStudioLoadedModelsAsync();
-        if (result.IsSuccess)
-        {
-            List<LMStudioModelDTO>? loadedModels = result.LoadedModels?.ToList();
-            if (loadedModels is not null && loadedModels.Any())
+            if (_lmStudioHttpProvider is null)
             {
-                LMStudioModelDTO? loaded = loadedModels.FirstOrDefault(m => m.State == "loaded");
-                if (loaded is not null)
+                _errorMessage = $"The LMStudio Http Provider is null";
+                return;
+            }
+            bool modelIsLoaded = false;
+            var result = await _lmStudioHttpProvider.GetLMStudioLoadedModelsAsync();
+            if (result.IsSuccess)
+            {
+                List<LMStudioModelDTO>? loadedModels = result.LoadedModels?.ToList();
+                if (loadedModels is not null && loadedModels.Any())
                 {
-                    _modelInfo = ($"Model ID: {loaded.Id}, Type: {loaded.Type}, Publisher: {loaded.Publisher}, State: {loaded.State}");
-                    _loadedModelId = loaded.Id;
-                    modelIsLoaded = true;
-                    if (_loadedModelId != _configuredTextModelId) _warningMessage = $"Warning: The actual text model \'{_loadedModelId}\' " +
-                    $"loaded in LMStudio does not match the model \'{_configuredTextModelId}\' specified by the application configuration. " +
-                    $"The model may not behave as expected.";
-                }
-                else
-                {
-                    _modelInfo = $"A loaded LM Studio model was not found.";
-                    _errorMessage = "Please check LM Studio configuration.";
+                    _loadedLMStudioModel = loadedModels.FirstOrDefault(m => m.State == "loaded");
+                    if (_loadedLMStudioModel is not null)
+                    {
+                        // JsonSerializerOptions _jsonOptions = new JsonSerializerOptions { WriteIndented = true };
+                        // string jsonModel = JsonSerializer.Serialize(loaded, _jsonOptions);
+                        // Console.WriteLine($"Loaded LM Studio Model: \n{jsonModel}");
+
+                        // _modelInfo = ($"Model ID: {loaded.Id}, Type: {loaded.Type}, Publisher: {loaded.Publisher}, State: {loaded.State}");
+                        if (_loadedLMStudioModel.Capabilities is not null) _loadedModelCapabilities = string.Join(", ", _loadedLMStudioModel.Capabilities);
+                        _loadedModelId = _loadedLMStudioModel.Id;
+                        modelIsLoaded = true;
+                        if (_loadedModelId != _configuredTextModelId) _warningMessage = $"Warning: The actual text model \'{_loadedModelId}\' " +
+                        $"loaded in LMStudio does not match the model \'{_configuredTextModelId}\' specified by the application configuration. " +
+                        $"The model may not behave as expected.";
+                    }
+                    else
+                    {
+                        // _modelInfo = $"A loaded LM Studio model was not found.";
+                        _errorMessage = "Please check LM Studio configuration.";
+                    }
                 }
             }
+            else _errorMessage = result.ErrorMessage;
+            _loadingConfiguration = false;
+            _thinking = false;
+            await ModelIsLoaded.InvokeAsync(modelIsLoaded);
         }
-        else _errorMessage = result.ErrorMessage;
-        _loadingConfiguration = false;
-        _thinking = false;
-        await ModelIsLoaded.InvokeAsync(modelIsLoaded);
+        catch (Exception ex)
+        {
+            _errorMessage = ex.Message;
+        }
     }
 
     private async Task GetOllamaLoadedModelData()
@@ -134,7 +170,7 @@
                 OllamaModelDTO? loaded = loadedModels.FirstOrDefault();
                 if (loaded is not null)
                 {
-                    _modelInfo = ($"Model ID: {loaded.Model}");
+                    // _modelInfo = ($"Model ID: {loaded.Model}");
                     _loadedModelId = loaded.Model;
                     modelIsLoaded = true;
                     if (_loadedModelId != _configuredTextModelId) _warningMessage = $"Warning: The actual text model \'{_loadedModelId}\' " +
@@ -143,7 +179,7 @@
                 }
                 else
                 {
-                    _modelInfo = $"An Ollama model was not found.";
+                    // _modelInfo = $"An Ollama model was not found.";
                     _errorMessage = "Please check Ollama configuration. It may take a moment for the model query to respond.";
                 }
             }
@@ -174,3 +210,79 @@
         // if (_kernelInfo is not null) _configuredModelProvider = _kernelInfo.ModelProvider;
     }
 }
+
+            @*
+@if (!_loadingConfiguration)
+{
+    <div class="row mt-2">
+        <div class="col-4">
+            <h5 class="mt-2">Model Provider: <span class="text-info-alt">@ConfiguredModelProvider</span></h5>
+        </div>
+        <div class="col-3">
+            <input inert type="text" class="bg-dark text-light form-control" @bind-value="ConfiguredModelProvider" />
+        </div>
+        <div class="col-4">
+            <h5 class="mt-2">Loaded Model: <span class="text-info-alt">@_loadedModelId</span></h5>
+        </div>
+        <div class="col-3">
+            <input inert type="text" class="bg-dark text-light form-control" @bind-value="_loadedModelId" />
+        </div>
+        @if (_loadedLMStudioModel is not null)
+        {
+            <div class="col-2 offset-1">
+                <a class="btn button-custom-yellow form-control" @onclick="ShowLoadedLMStudioModel">Model Info</a>
+            </div>
+        }
+    </div>
+    <div class="row mt-2">
+        <div class="col-12">
+            <h6 class="text-info-alt"><i>@_modelInfo</i></h6>
+        </div>
+    </div>
+}
+
+@if (_loadedLMStudioModel is not null)
+{
+    <h5>Loaded Model:</h5>
+    <div class="row mt-2">
+        <div class="col-3">
+            <span>Model Id: @_loadedLMStudioModel.Id</span>
+        </div>
+        <div class="col-3">
+            <span>Object: @_loadedLMStudioModel.Object</span>
+        </div>
+        <div class="col-3">
+            <span>Type: @_loadedLMStudioModel.Type</span>
+        </div>
+        <div class="col-3">
+            <span>Publisher: @_loadedLMStudioModel.Publisher</span>
+        </div>
+    </div>
+    <div class="row mt-2">
+        <div class="col-3">
+            <span>Arch: @_loadedLMStudioModel.Arch</span>
+        </div>
+        <div class="col-3">
+            <span>Compatability Type: @_loadedLMStudioModel.Compatibility_Type</span>
+        </div>
+        <div class="col-3">
+            <span>Quantization: @_loadedLMStudioModel.Quantization</span>
+        </div>
+        <div class="col-3">
+            <span>State: @_loadedLMStudioModel.State</span>
+        </div>
+    </div>
+
+    <div class="row mt-2">
+        <div class="col-3">
+            <span>Max Context Length: @_loadedLMStudioModel.Max_Context_Length</span>
+        </div>
+        <div class="col-3">
+            <span>Loaded Context Length: @_loadedLMStudioModel.Loaded_Context_Length</span>
+        </div>
+        <div class="col-6">
+            <span>Capabilities: @string.Join(", ", _loadedLMStudioModel.Capabilities!)</span>
+        </div>
+    </div>
+}
+            *@
