--- a/SemanticAgents/SemanticAgents/Components/_Imports.razor
+++ b/SemanticAgents/SemanticAgents/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using SemanticAgents.Components.Pages.Config
 @using SemanticAgents.Components.Pages.Config.Components
 @using SemanticAgents.Components.Pages.Chat
+@using SemanticAgents.Components.Pages.Config.Modals
